== 1.0.3 - ???
* Added test-unit as a development dependency.

== 1.0.2 - 29-Jul-2011
* Fixed a bug where the name hash keys could potentially be overwritten if there
  were multiple statistics for the same name. Thanks go to Jens Deppe for the
  spot and the patch.
* Added the "class" information to the statistics hash.
* Rakefile refactored. The old style of library installation has been removed.
  Use the 'gem' tasks now. In addition, gem creation is now handled via a Rake
  task now.
* Some minor modifications to the gemspec to reflect the changes in the
  Rakefile, as well as a change required due to the switch from CVS to git.
* Added a .gitignore file.
* Changed license to Artistic 2.0.

== 1.0.1 - 27-Aug-2009
* Changed the license to Artistic 2.0.
* Fixed warnings that could occur if the @module, @name, or @instance
  variables were not set in the constructor. They are now explicitly
  set to nil if they do not have any value.
* Updates to the gemspec, including license and description.
* Renamed and performed some minor refactoring of the test and example files.
* Changed one test to use 'biostats' instead of 'flushmeter' because
  the latter does not appear to be defined in a Solaris VM.
* Added the 'example' rake task.

== 1.0.0 - 4-Feb-2008
* Updated the extconf.rb file so that it sets the target prefix properly.
* Version bump to 1.0.0.
* No actual source code changes.

== 0.2.3 - 23-Jul-2007
* KstatError is now Kstat::Error.
* Documentation improvements and updates.
* Added a Rakefile with tasks for installation and testing.
* Added a dir_config('kstat') to the extconf.rb file in case you should need it.
* Internal project layout and code cleanup changes that you don't care about.

== 0.2.2 - 10-Jul-2006
* Updated the gemspec (and put a gem out on RubyForge).

== 0.2.1 - 31-Mar-2005
* Added some taint checking for string arguments.
* Added better error messages for various kstat related C function failures.
* Made this document rdoc friendly.